# shieldlend-solana

./: .env.example  .gitignore  AGENTS.md  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  security-checklist.md
.ai/: CONTEXT_INDEX.md  CURRENT_TASK.md  DECISIONS.md  SESSION_HANDOFF.md  TASK_LOG.md
Design Files/: app.jsx  chrome.jsx  data.js  icons.jsx  index.html  index_v1.html  onboarding.jsx  screen-borrow.jsx  screen-deposit.jsx  screen-history.jsx  screen-positions.jsx  screen-repay.jsx  screen-withdraw.jsx  slideover-status.jsx  styles.css
audit-prompts/: 00_discovery.md  01_architecture.md  02_zk_circuits.md  03_solana_anchor.md  04_backend_integration.md  05_frontend_privacy.md  06_privacy_threat_model.md  07_testing_demo_readiness.md  08_final_synthesis.md
audit-reports/: BACKEND_FIX_NOTES.md  FRONTEND_DEMO_FIX_NOTES.md  GROTH16_SOLANA_INTEGRATION_PLAN.md  ONCHAIN_VERIFIER_BLOCKERS.md  ZK_ARTIFACT_BLOCKERS.md  ZK_FIX_NOTES.md  ZK_GENERATION_NOTES.md
circuits/: CEREMONY.md  artifact_manifest.json  collateral_ring.circom  constants.circom  constants.json  dev_pot14_final.ptau  public_signals.json  repay_ring.circom  withdraw_ring.circom
docs/: ANCHOR_032_UPGRADE.md  CORE_PRIVACY_UI_PR.md  DEMO_SCRIPT.md  DESIGN_DECISIONS.md  ENCRYPT_LIVE_HARDENING.md  HACKATHON.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  MAGICBLOCK_PRIVATE_PAYMENTS.md  NOTE_LIFECYCLE.md  PITCH_DECK.md  PRIVACY_AND_THREAT_MODEL.md  PRIVACY_MODEL.md  RESEARCH_REPORT.md  SUBMISSION_CHECKLIST.md  THREAT_MODEL.md  UMBRA_WSOL_PAYOUT.md  VISUAL_FLOWS.md  architecture.md
frontend/: .env.example  next.config.mjs  package.json  tsconfig.json
programs/lending_pool/: Cargo.toml
programs/lending_pool/src/: groth16_verifier.rs  lib.rs
programs/nullifier_registry/: Cargo.toml
programs/nullifier_registry/src/: lib.rs
programs/shielded_pool/: Cargo.toml
programs/shielded_pool/src/: groth16_verifier.rs  lib.rs
scripts/: check-encrypt.mjs  check-env.mjs  check-ika.mjs  check-magicblock.mjs  check-umbra.mjs  convert-vkeys.mjs  demo-status.mjs  derive-program-id-field.mjs  devnet-e2e.mjs  devnet-fullround.mjs  devnet-smoke.mjs  devnet-wsol-umbra-roundtrip.mjs  encrypt-anchor-smoke.mjs  encrypt-health-smoke.mjs  generate-zk-artifacts.mjs  ika-anchor-approval-smoke.mjs  ika-anchor-cpi-diagnostic.mjs  (+7 more)
(+52 files in other folders)
