[package]
name = "shielded_pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shielded_pool"

[features]
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
nullifier_registry = { path = "../nullifier_registry", features = ["cpi"] }
groth16-solana = "0.0.3"
